[package]
name = "app_cli"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tui = { version = "0.19.0" }
tempfile = "3"
libc = "0.2.124"

[[example]]
name = "git"
path = "examples/git/git.rs"
required-features = ["cargo","derive"]
test = true

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
cc = "1.0.73"
