[package]
name = "app_cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tui = { version = "0.19.0" }
tempfile = "3"
libc = "0.2.124"
dotenv = "0.15.0"
serde_yaml = "0.9.13"
serde = { version="1.0.145", features=["derive"]  }
serde_json = { version = "1.0.85", default-features = false, features = ["alloc"] }

[[example]]
name = "git"
path = "examples/git/git.rs"
required-features = ["cargo","derive"]
test = true

[[bin]]
name = "app_cli"
path = "src/main.rs"

[build-dependencies]
cc = "1.0.73"
